Downgrade to Java 8
(cherry picked from commit 73c9aae8edd69e6b7e7eaada71e65db83a416910)